# Alexa-Shopping-List

./: .gitignore  Dockerfile  MYNDY_INTEGRATION.md  README.md  docker-compose.yml  last_run_cookies.json  list.txt  login.py  login.sh  mcp_server_root.py  pyproject.toml  requirements.txt  run.py  start-http-mcp.sh  test.py  test.sh
.claude/: settings.local.json
.cursor/rules/: 00-core-agent.mdc  01-project-context.mdc  02-common-errors.mdc  03-mcp-configuration.mdc
.cursor/rules/languages/: CPP20.mdc  Python3.mdc  TypeScript5.mdc
.cursor/rules/tasks/: API-Docs.mdc  API-Endpoints.mdc  Accessibility-Review.mdc  Analyze-Coverage.mdc  Analyze-Data.mdc  Analyze-Dependencies.mdc  Analyze-Logs.mdc  Analyze-Requirements.mdc  App-Logic.mdc  Architecture-Design-Review.mdc  Caching-Strategy.mdc  Code-Errors.mdc  Code-Quality-Review.mdc  Compliance-Check.mdc  Component-Interfaces.mdc  Create-Cursor-Rule.mdc  Create-Plan.mdc  Data-Migration-Plan.mdc  Database-Schema.mdc  DevOps-Tasks.mdc  Develop-Roadmap.mdc  Enhance-Maintainability.mdc  Enhance-Scalability.mdc  Estimate-Effort.mdc  General-Writing.mdc  Generate-Boilerplate.mdc  Generate-Config.mdc  Generate-LLM-Prompt.mdc  Generate-Onboarding.mdc  Generate-Types.mdc  Git-Flow.mdc  (+15 more)
.github/: FUNDING.yml
docs/: alexa.md  list-bridge
src/alexa_mcp.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
src/alexa_shopping_list/: alexa_api.py  auth.py  config.py  main.py
src/api/: alexa_api.py  config.py  main.py  requirements.txt
src/auth/: config.py  login.py
src/mcp/: __init__.py  config.py  http_mcp_server.py  mcp_server.py
(+10 files in other folders)
