[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "alexa-mcp"
version = "0.1.0"
description = "Alexa Shopping List MCP Server"
# Add other metadata like author, license, etc. if needed
# Add dependencies here if they are not only in requirements.txt
# Example: dependencies = ["fastapi", "uvicorn", "requests", ...]

[tool.setuptools.packages.find]
where = ["src"] # Tells setuptools to look for packages in the src directory
